@@ -15,7 +15,8 @@ POSTDEPLOY
 3.169 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- MAINT: Add cached health check for elasticsearch to short-circuit requests
+  when the server is already down
 
 
 3.168 (2018-07-09)
